# learning-system

./: .editorconfig  .pre-commit-config.yaml  README.md
notifier-bot/: .env.dist  Dockerfile  (+2 more)
testing/: .env.example  .gitignore  README.md  __main__.py  alembic.ini  docker-compose.dev.yaml  pyproject.toml
testing/application/: transactions.py
testing/application/contest_tasks/usecases/: __init__.py  create.py  delete.py  read.py  read_all.py  readall.py  update.py
testing/application/execution_tests/usecases/: __init__.py  create.py  delete.py  read.py
testing/application/solution/usecases/: __init__.py  create.py  dto.py  read.py  readall.py  update.py  worker_gateway.py
testing/domain/: exceptions.py
testing/domain/contest_tasks/: dtos.py  entities.py  exceptions.py  repositories.py
testing/domain/execution_tests/: dtos.py  entities.py  enums.py  repositories.py
testing/domain/solution/: dtos.py  entities.py  enums.py  repositories.py
testing/infrastructure/: config.py  server.py
testing/infrastructure/database/: mappers.py  postgres.py  transactions.py
testing/infrastructure/database/alembic/: env.py
testing/infrastructure/database/repositories/: repository.py
testing/infrastructure/http/: app.py
testing/infrastructure/http/api/: models.py  retort.py
testing/infrastructure/mocks/: transactions.py
testing/infrastructure/mocks/providers/: container.py  repositories.py  transactions.py
testing/infrastructure/providers/: config.py  container.py  database.py  repositories.py  usecases.py
testing/infrastructure/tests/: conftest.py
(+23 files in other folders)
