[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["mihett05 <mihett05@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
dishka = "^1.4.2"
adaptix = "^3.0.0b9"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
alembic-postgresql-enum = "^1.6.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
